--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,46 +1,32 @@
-[tool.poetry]
+[project]
 name = "simple-archive"
 version = "0.1.0"
-description = "CLI and library for working with Simple Archive Formaat"
-authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
-license = "MIT"
+description = "CLI and library for working with Simple Archive Format"
+authors = [
+    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
+    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
+]
+license = { text = "MIT" }
 readme = "README.md"
-packages = [{include = "simple_archive"}]
+requires-python = ">=3.8.1"
+dependencies = ["typer<1.0.0,>=0.7.0", "pydantic<2.0.0,>=1.10.6"]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-typer = "^0.7.0"
-pydantic = "^1.10.6"
-
-
-[tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
-mypy = "^1.1.1"
-pytest = "^7.2.2"
-pytest-cov = "^4.0.0"
-
-[tool.poetry.group.ci]
-optional = true
-
-[tool.poetry.group.ci.dependencies]
-ruff = "^0.0.252"
-
-[tool.poetry.scripts]
+[project.scripts]
 safar = "simple_archive.cli:app"
 
+
+[tool.pdm]
+[tool.pdm.dev-dependencies]
+dev = [
+    "mypy>=1.10.0",
+    "pytest>=8.2.0",
+    "pytest-cov>=5.0.0",
+    "ruff>=0.4.4",
+    "bump-my-version>=0.10.0",
+]
+
+[tool.pdm.build]
+includes = ["simple_archive"]
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.black]
-line-length = 88
-target-version = ["py38","py39","py310", "py311"]
-
-[tool.ruff]
-select = ["A", "E", "F", "I", "W", "B", "S"]
-
-line-length = 88
-
-ignore = ["E501"]
-
-unfixable = ["B"]
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
