--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -16,5 +16,5 @@ replace = 'version = "{new_version}"'
 
 [[tool.bumpversion.files]]
 filename = "CHANGELOG.md"
-search = '## [unreleased]'
-replace = '## [{new_version}] - {now:%Y-%m-%d}'
+search = "## [unreleased]"
+replace = "## [{new_version}] - {now:%Y-%m-%d}"
