--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -14,7 +14,7 @@ filename = "pyproject.toml"
 search = 'version = "{current_version}"'
 replace = 'version = "{new_version}"'
 
-# [[tool.bumpversion.files]]
-# filename = "CHANGELOG.md"
-# search = "## [unreleased]"
-# replace = "## [{new_version}] - {now:%Y-%m-%d}"
+[[tool.bumpversion.files]]
+filename = "CHANGELOG.md"
+search = "## [unreleased]"
+replace = "## [{new_version}] - {now:%Y-%m-%d}"
